Fixing whitespaces on the edges on mobile portrait mode

--- a/client/src/assets/images.css
+++ b/client/src/assets/images.css
@@ -3,14 +3,12 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
+  overflow-x: hidden !important;
+
 }
 
 body, html {
   max-width: 100vw;
   margin: 0 auto;
   overflow-x: hidden;
-}
-
-* {
-  overflow-x: hidden !important;
 }
